# ChangeLog for dev-perl/Params-Validate
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Params-Validate/ChangeLog,v 1.66 2008/09/08 07:24:55 tove Exp $

  08 Sep 2008; Torsten Veller <tove@gentoo.org>
  -Params-Validate-0.78.ebuild, -Params-Validate-0.81.ebuild,
  -Params-Validate-0.86.ebuild, -Params-Validate-0.87.ebuild:
  Cleanup

*Params-Validate-0.91 (08 Sep 2008)

  08 Sep 2008; Torsten Veller <tove@gentoo.org>
  +Params-Validate-0.91.ebuild:
  Version bump

  10 Nov 2007; Samuli Suominen <drac@gentoo.org>
  Params-Validate-0.88.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Params-Validate-0.88.ebuild:
  Stable on ppc.

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  Params-Validate-0.88.ebuild:
  alpha/ia64/x86 stable

  07 Jul 2007; Tom Gall <tgall@gentoo.org> Params-Validate-0.88.ebuild:
  stable on ppc64

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Params-Validate-0.88.ebuild:
  Marking sparc stable

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Params-Validate-0.87.ebuild:
  ppc stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org>
  Params-Validate-0.86.ebuild:
  Stable on ppc64

  14 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Params-Validate-0.87.ebuild:
  sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  Params-Validate-0.87.ebuild:
  Marking stable amd64

*Params-Validate-0.88 (11 Mar 2007)

  11 Mar 2007; Michael Cummings <mcummings@gentoo.org>
  +Params-Validate-0.88.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Params-Validate-0.86.ebuild:
  Stable on x86, bug #169152.

*Params-Validate-0.87 (20 Jan 2007)

  20 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +Params-Validate-0.87.ebuild:
  Version bump

  19 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  Params-Validate-0.86.ebuild:
  Add ~x86-fbsd keyword.
