@@ -1,0 +1,25 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Params-Validate/Params-Validate-0.92.ebuild,v 1.1 2009/09/26 19:52:32 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=DROLSKY
+inherit perl-module
+
+DESCRIPTION="A module to provide a flexible system for validation method/function call parameters"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+RDEPEND=""
+DEPEND="${RDEPEND}
+	>=virtual/perl-Module-Build-0.35"
+
+SRC_TEST="do"
+
+src_install () {
+	perl-module_src_install
+	dohtml htdocs/*
+}
