@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Params-Validate
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Params-Validate/ChangeLog,v 1.66 2008/09/08 07:24:55 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Params-Validate/ChangeLog,v 1.67 2009/09/26 19:52:32 tove Exp $
+
+*Params-Validate-0.92 (26 Sep 2009)
+
+  26 Sep 2009; Torsten Veller <tove@gentoo.org>
+  +Params-Validate-0.92.ebuild:
+  Version bump
 
   08 Sep 2008; Torsten Veller <tove@gentoo.org>
   -Params-Validate-0.78.ebuild, -Params-Validate-0.81.ebuild,
